--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="jumbotron">
 		<div class="header ">
-			<span class="header-pt-1">Air</span><span class="header-pt-2">Review</span>
+			<a href="#"><span class="header-pt-1">Vayu</span><span class="header-pt-2">Review</span></a>
 		</div>
 
 		<div class="login">
@@ -40,29 +40,12 @@
 					<div class="rating-circle">5/10</div>
 				</td>
 				<td class="airline-desc">
-					<h4> <a href="gi.html">Garuda Indonesia</a></h4>
+					<h4> <a href="ba.html">British Airways</a></h4>
 					<div>
-						<span>✅ Trip Verified | I flew from Amsterdam to Jakarta on 13 June. I bought the ticket last minutes at the airport and the staff were so helpful. It was delayed for about 40 minutes. The cabin crew ware so… <a href="gi.html">Read more</a></span>
+						<span>✅ Trip Verified | Tel Aviv to Toronto via London. The plane from London to Toronto was run by Air Belgium The service from checkin until we received our cases here in Israel was... <a href="ba.html">Read more</a></span>
 					</div>
 					<div>
-						<em><strong><a href="gi.html">334 Reviews</a></strong></em>
-					</div>
-				</td>
-			</tr>
-
-
-			<tr>
-				<td>
-					<div class="rating-circle">8.5/10</div>
-				</td>
-				<td class="airline-desc">
-					<br>
-					<h4> <a href="delta.html">Delta Airlines</a></h4>
-					<div>
-						<span>❎ Not Verified | Toronto to Venice via Montreal. Flight from Montreal to Venice was delayed for 3 hours, we were left on the tarmac with no air con, no food but access to the toilets. Cabin crew disappeared and… Read more<a href="delta.html">Read more</a></span>
-					</div>
-					<div>
-						<em><strong><a href="delta.html">111 Reviews</a></strong></em>
+						<em><strong><a href="ba.html">334 Reviews</a></strong></em>
 					</div>
 				</td>
 			</tr>
@@ -74,12 +57,29 @@
 				</td>
 				<td class="airline-desc">
 					<br>
-					<h4> <a href="fin.html">Finnair</a></h4>
+					<h4> <a href="delta.html">Delta Airlines</a></h4>
 					<div>
-						<span>✅ Trip Verified | Helsinki to Hong Kong. We were excited to try their business class, but not a big experience. I found the seat narrow, and when i put it down as a bed, it was uncomfortable, but manage… <a href="fin.html">Read more</a></span>
+						<span>❎ Not Verified | Toronto to Venice via Montreal. Flight from Montreal to Venice was delayed for 3 hours, we were left on the tarmac with no air con, no food but access to the toilets. Cabin crew disappeared and... <a href="delta.html">Read more</a></span>
 					</div>
 					<div>
-						<em><strong><a href="fin.html">596 Reviews</a></strong></em>
+						<em><strong><a href="delta.html">111 Reviews</a></strong></em>
+					</div>
+				</td>
+			</tr>
+
+
+			<tr>
+				<td>
+					<div class="rating-circle">3/10</div>
+				</td>
+				<td class="airline-desc">
+					<br>
+					<h4> <a href="cpa.html">Cathay Pacific Airways</a></h4>
+					<div>
+						<span>✅ Trip Verified | Dubai to Hong Kong. Want to be robbed in business class? Then let me recommend Cathay Pacific. Apparently this happens enough that showing people kindness and compassion does not matter to crew members as demonstrated to… <a href="cpa.html">Read more</a></span>
+					</div>
+					<div>
+						<em><strong><a href="cpa.html">596 Reviews</a></strong></em>
 					</div>
 				</td>
 			</tr>
@@ -108,9 +108,9 @@
 				</td>
 				<td class="airline-desc">
 					<br>
-					<h4> <a href="emirates.html">Emirates Airlines</a></h4>
+					<h4> <a href="emirates.html">Emirates</a></h4>
 					<div>
-						<span>✅ Trip Verified | I flew from Amsterdam to Jakarta on 13 June. I bought the ticket last minutes at the airport and the staff were so helpful. It was delayed for about 40 minutes. The cabin crew ware so… <a href="emirates.html">Read more</a></span>
+						<span>✅ Trip Verified | Asheville to Bonaire via Atlanta. I am writing only because of the appalling customer service I recently received. I know the flights are full and tensions are high however Delta puts it head and the ground and ignores it.… <a href="emirates.html">Read more</a></span>
 					</div>
 
 					<div>
@@ -125,7 +125,9 @@
 	
 
  
-
+	<div class="jumbotron-footer">
+		<div>Copyright @ AirReview</div>
+	</div>
 
 
 </body>
