update with requested changes

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 		<table border="0">
 
 			<tr>
-				<h4>Airline and Airport Customer Reviews </h4>
+				<h4>Airline Customer Reviews </h4>
 			</tr>
 			<tr>
-				<span> ✅ TRIP VERIFIED highlights reviews where users supplied proof of travel with their ticket, booking or boarding pass.</span>
+				<span> VERIFIED highlights and reviews where users supplied proof of travel with their ticket, booking or boarding pass.</span>
 			</tr>
 			<hr>
 
