add dynamic reviews

--- a/ba.html
+++ b/ba.html
@@ -112,9 +112,25 @@
 				</td>
 			</tr>
 		</table>
-		<table>
 
-			 <tr>
+		<div>
+			<span>
+				Filter Results :
+			</span>
+			<br>			
+			<button class="btn btn-small" id = '10' onclick="handleClick(10)" id="show-10">10 Reviews</button>
+			<button class="btn btn-small" id = '25' onclick="handleClick(25)" id="show-25">25 Reviews</button>
+		</div>
+
+		<div id='num_results_display'>
+			
+		</div>
+		
+		
+
+		<table id="reviews-table">
+
+<!-- 			 <tr>
                     <td style="vertical-align: top;">
                                         <br>
                         <div class="rating-circle-medium">9/10</div>
@@ -126,7 +142,7 @@
                         <span>  Karen Deitch (Israel) 21st July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Tel Aviv to Toronto via London. The plane from London to Toronto was run by Air Belgium The service from checkin until we received our cases here in Israel was excellent. The cabin staff on each airline were helpful and friendly. The food was all acceptable for economy airline food and we had snacks and on 1 flight icecream was served. Soft drinks as well as wine and alcohol was plentiful for the people that asked and water was served all during each flight. The planes had ample leg room and the seats were comfortable for economy class. Inflight entertainment was good enough there was something to watch on 4 flights. I haven't travelled British Airways for years but I will do again if the price is competitive as were these flights</span>
+                            <span>  Trip Verified |  Tel Aviv to Toronto via London. The plane from London to Toronto was run by Air Belgium The service from checkin until we received our cases here in Israel was excellent. The cabin staff on each airline were helpful and friendly. The food was all acceptable for economy airline food and we had snacks and on 1 flight icecream was served. Soft drinks as well as wine and alcohol was plentiful for the people that asked and water was served all during each flight. The planes had ample leg room and the seats were comfortable for economy class. Inflight entertainment was good enough there was something to watch on 4 flights. I haven't travelled British Airways for years but I will do again if the price is competitive as were these flights</span>
                         </div>
                         <br>
                         <table>
@@ -225,7 +241,7 @@
                         <span>  P Meares (New Zealand) 20th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  I flew yesterday from Heathrow to Manchester in business class, from start to finish it was a shambles.  I was sent to the wrong baggage drop, then to the wrong lounge, I showed my boarding card and sent to the north lounge the furthest from the gate. The boarding process was more like a rugby scrum, no notice was taken of class of service and then my boarding card said assistance required so another queue was needed no explanation was given for this.</span>
+                            <span>  Trip Verified |  I flew yesterday from Heathrow to Manchester in business class, from start to finish it was a shambles.  I was sent to the wrong baggage drop, then to the wrong lounge, I showed my boarding card and sent to the north lounge the furthest from the gate. The boarding process was more like a rugby scrum, no notice was taken of class of service and then my boarding card said assistance required so another queue was needed no explanation was given for this.</span>
                         </div>
                         <br>
                         <table>
@@ -323,7 +339,7 @@
                         <span>  2 reviews    C Marvere (Belgium) 18th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  The first part from Brussels to London Heathrow was a fast flight, however on the ground in London the problems started. The gate where the arriving plane was planned to stop was not free what occurred in a waiting time on the ground for 40 minutes. The captain constantly gave information and the entire team was friendly and courteous. Continental breakfast in business was OK for this short flight. Flight to Larnaca was full, embarkation was prompt for business pax. The team was very friendly. The service started with a drink and some cookies , the meal was good despite a more substantial appetiser could be expected - a few slices of green salad and one cherry tomato is a side dish not an appetiser. It must be said the meal was an improvement since last year. Decent drinks and a good Champagne were available, followed by coffee or tea. It is a longer flight - a second round of drinks an hour before landing was maybe appropriated however it was not a problem to receive additional drinks.</span>
+                            <span>  Trip Verified |  The first part from Brussels to London Heathrow was a fast flight, however on the ground in London the problems started. The gate where the arriving plane was planned to stop was not free what occurred in a waiting time on the ground for 40 minutes. The captain constantly gave information and the entire team was friendly and courteous. Continental breakfast in business was OK for this short flight. Flight to Larnaca was full, embarkation was prompt for business pax. The team was very friendly. The service started with a drink and some cookies , the meal was good despite a more substantial appetiser could be expected - a few slices of green salad and one cherry tomato is a side dish not an appetiser. It must be said the meal was an improvement since last year. Decent drinks and a good Champagne were available, followed by coffee or tea. It is a longer flight - a second round of drinks an hour before landing was maybe appropriated however it was not a problem to receive additional drinks.</span>
                         </div>
                         <br>
                         <table>
@@ -421,7 +437,7 @@
                         <span>  G Wailin (Australia) 16th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Stockholm to London. Worst business class flight I have flown. Split seating for myself and my wife because apparently they were overbooked. The meal was inedible for me, and was the worst airline meal I have been served. </span>
+                            <span>  Trip Verified |  Stockholm to London. Worst business class flight I have flown. Split seating for myself and my wife because apparently they were overbooked. The meal was inedible for me, and was the worst airline meal I have been served. </span>
                         </div>
                         <br>
                         <table>
@@ -519,7 +535,7 @@
                         <span>  L Allen (United Kingdom) 15th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified | Seems like no one was aware of my existence on the flight. No drink, no snack, no bottle of water was offered. No amenity kits. When I asked, they said none were left in stock. They gave me toothpaste and a toothbrush, which was ok, and fast track invitation, which was useless, since no fast track is offered to British passports. I was not given a menu, I even had to ask for it. I was not served the meal and they said it was because I was sleeping. Ok fine but even when I was awake, no one bothered to ask me about the meal. I had to ask for the menu, a bottle of water, and the meal. And after all, no apologies from the staff. Too many people are squeezed into business class. Even though I could lie down 180 degrees, I had very little space at my seat. Given the very expensive fare, I expected a much better service for business class passengers. I'm very disappointed and will never use it again. I won't recommend British Airways business class to anyone!</span>
+                            <span>  Trip Verified | Seems like no one was aware of my existence on the flight. No drink, no snack, no bottle of water was offered. No amenity kits. When I asked, they said none were left in stock. They gave me toothpaste and a toothbrush, which was ok, and fast track invitation, which was useless, since no fast track is offered to British passports. I was not given a menu, I even had to ask for it. I was not served the meal and they said it was because I was sleeping. Ok fine but even when I was awake, no one bothered to ask me about the meal. I had to ask for the menu, a bottle of water, and the meal. And after all, no apologies from the staff. Too many people are squeezed into business class. Even though I could lie down 180 degrees, I had very little space at my seat. Given the very expensive fare, I expected a much better service for business class passengers. I'm very disappointed and will never use it again. I won't recommend British Airways business class to anyone!</span>
                         </div>
                         <br>
                         <table>
@@ -617,7 +633,7 @@
                         <span>  Paul Rogers (United Kingdom) 14th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified | Premium economy don’t waste your money on an overnight flight! Going out is acceptable but the night flight we had was a disgrace! The food (I use this term lightly) wasn’t fit for dogs on our flight, it was salmon we think as it didn’t taste of anything, a meat of some kind but was too tough to stick a fork into let alone eat it. The veg tasted burnt, bread roll was ok. (Not really a saving grace). One cup of tea or coffee at breakfast and don’t bother asking what was in the box left on our table! I didn’t bother trying it. The look on other people’s faces was good enough for me to know don’t bother! Which in comparison to the outbound flight (London to Orlando) was worlds apart, greeted with a drink which was the first of many, dinner was nice, the steak edible, veg cooked just right and dessert was nice with plenty of drinks! Inflight entertainment was good even though there was supposed to be WiFi but couldn’t log on so saved some money there. I really thought this was going to be the best way to travel. Oh a broken seat for one of our party was a bit disappointing, homeward bound and the inflight entertainment seem rather lacklustre which leads me to think it was an older plane. But that really shouldn’t happen. What is not told when booking, homeward flight on the top of your ticket if you have TSA PRE you don’t have to join the massive queue, look for pre entered TSA line that’s the one that’s empty cause they tell no one about it.</span>
+                            <span>  Trip Verified | Premium economy don’t waste your money on an overnight flight! Going out is acceptable but the night flight we had was a disgrace! The food (I use this term lightly) wasn’t fit for dogs on our flight, it was salmon we think as it didn’t taste of anything, a meat of some kind but was too tough to stick a fork into let alone eat it. The veg tasted burnt, bread roll was ok. (Not really a saving grace). One cup of tea or coffee at breakfast and don’t bother asking what was in the box left on our table! I didn’t bother trying it. The look on other people’s faces was good enough for me to know don’t bother! Which in comparison to the outbound flight (London to Orlando) was worlds apart, greeted with a drink which was the first of many, dinner was nice, the steak edible, veg cooked just right and dessert was nice with plenty of drinks! Inflight entertainment was good even though there was supposed to be WiFi but couldn’t log on so saved some money there. I really thought this was going to be the best way to travel. Oh a broken seat for one of our party was a bit disappointing, homeward bound and the inflight entertainment seem rather lacklustre which leads me to think it was an older plane. But that really shouldn’t happen. What is not told when booking, homeward flight on the top of your ticket if you have TSA PRE you don’t have to join the massive queue, look for pre entered TSA line that’s the one that’s empty cause they tell no one about it.</span>
                         </div>
                         <br>
                         <table>
@@ -715,7 +731,7 @@
                         <span>  T Kerber (Australia) 13th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Lisbon to London. Business class is just economy class with an empty middle seat. No leg room for me. Meal service had no choice by the time they got halfway through business class. All that was left was cod. Freezing cold, but no blankets. Poor staff spent most of the flight apologising. Never fly British Airways. </span>
+                            <span>  Trip Verified |  Lisbon to London. Business class is just economy class with an empty middle seat. No leg room for me. Meal service had no choice by the time they got halfway through business class. All that was left was cod. Freezing cold, but no blankets. Poor staff spent most of the flight apologising. Never fly British Airways. </span>
                         </div>
                         <br>
                         <table>
@@ -813,7 +829,7 @@
                         <span>  Peter Meikle (United Kingdom) 12th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified | Heathrow to Marseille. Within a few days of booking a flight for December, BA advised flight has been changed to late evening arrival. This is unacceptable so I opt to cancel and full refund. BA then says it is refunding the fare and makes no mention of the fee I have paid for seat selection. I have found a claim form for refund of these fees, on submission they say they will take up to 28 days to think about it.</span>
+                            <span>  Trip Verified | Heathrow to Marseille. Within a few days of booking a flight for December, BA advised flight has been changed to late evening arrival. This is unacceptable so I opt to cancel and full refund. BA then says it is refunding the fare and makes no mention of the fee I have paid for seat selection. I have found a claim form for refund of these fees, on submission they say they will take up to 28 days to think about it.</span>
                         </div>
                         <br>
                         <table>
@@ -911,7 +927,7 @@
                         <span>  H Galloway (Canada) 10th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified | Madrid to London with British Airways. There is nothing left of business class on these flights. When they bring the hot towel it feels like a bad joke. Seats are the same as coach, they took forever to hang my jacket after I asked in three occasions, they gave me a sit that is considered a bad coach seat without window! (See picture) and on top of everything I find myself having to put my luggage (just a backpack) far behind my seat because they are choosing to bring the extra hand luggage that doesn’t fit anymore in coach to business class. Ridiculous service so not worth the x2.5 cost that a business class ticket goes for. Feel totally ripped off.</span>
+                            <span>  Trip Verified | Madrid to London with British Airways. There is nothing left of business class on these flights. When they bring the hot towel it feels like a bad joke. Seats are the same as coach, they took forever to hang my jacket after I asked in three occasions, they gave me a sit that is considered a bad coach seat without window! (See picture) and on top of everything I find myself having to put my luggage (just a backpack) far behind my seat because they are choosing to bring the extra hand luggage that doesn’t fit anymore in coach to business class. Ridiculous service so not worth the x2.5 cost that a business class ticket goes for. Feel totally ripped off.</span>
                         </div>
                         <br>
                         <table>
@@ -1009,7 +1025,7 @@
                         <span>  A McFarlin (United States) 10th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Gatwick to Glasgow. Awful experience. Our flight arrived over 2 hours late at 8.50pm, so late our car rental company was closed and we were stuck at the airport without our car. We had to pay for a taxi to our hotel and back to the airport the next day which was really expensive. Our new car hire was three times the price since it was last minute. British Airways would not help compensate because they said it wasn’t their fault.</span>
+                            <span>  Trip Verified |  Gatwick to Glasgow. Awful experience. Our flight arrived over 2 hours late at 8.50pm, so late our car rental company was closed and we were stuck at the airport without our car. We had to pay for a taxi to our hotel and back to the airport the next day which was really expensive. Our new car hire was three times the price since it was last minute. British Airways would not help compensate because they said it wasn’t their fault.</span>
                         </div>
                         <br>
                         <table>
@@ -1092,7 +1108,7 @@
                         </table>
                         <br>
                     </td>
-                </tr>
+                </tr> -->
     
 
 		</table>
@@ -1100,7 +1116,9 @@
 	</div>
 
 	<div class="jumbotron-footer">
-		<div>Copyright @ AirReview</div>
+		<div>Copyright @ VayuReview</div>
 	</div>
+
 </body>
+<script type="text/javascript" src="js/app.js"></script>
 </html>
