--- a/delta.html
+++ b/delta.html
@@ -110,6 +110,25 @@
 				</td>
 			</tr>
 		</table>
+
+				<div>
+			<span>
+				Filter Results :
+			</span>
+			<br>			
+			<button class="btn btn-small" id = '10' onclick="handleClick(10)" id="show-10">10 Reviews</button>
+			<button class="btn btn-small" id = '25' onclick="handleClick(25)" id="show-25">25 Reviews</button>
+		</div>
+
+		<div id='num_results_display'>
+			
+		</div>
+		
+		
+
+		<table id="reviews-table">
+
+<!--
 		<table>
 			<tr>
                     <td style="vertical-align: top;">
@@ -123,7 +142,7 @@
                         <span>  1 reviews    Victor Mercedes (United States) 23rd July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Fort Lauderdale  to LaGuardia. On June 15, 2019, I took a flight from FLL to LGA and when I was in Florida, a Delta employee checked all of my 7 suitcases. I paid extra weight and I went in the plane, when I was in the plane, in my seat 24F a Delta employee told me they had taken out a couple of bottles of liquor, after I paid for the extra weight. She told me that in order to get my bottles back all I had to do was call Delta the moment we landed. When I got home I noticed they had taken bottles of 4 of my suitcases not just one. That they had taken out 28 bottles. The problem was that when I called them the same night they said they had nothing but they would call me back, two weeks later passed they still hadn't call me and every single time I called I was told "we will call you back". I called them back almost every single day, every single time it was a different story and when finally someone told me that in fact those bottles where there, the next day they would say they had nothing. I don't understand how those bottles be there one day and then be gone the next day. As much as I like Delta I have to say that they or whoever opened my suitcases broke the rules because by law they are supposed to open my suitcases in front of me, they are supposed to call me to let me know that they are going to open them and none of that happened. Its over a month now and I've only gotten 7 of my bottles after they said they had 8. I no longer know what to do. I call Delta I call the TSA and all they say is that they only have 7 when I know for a fact that they have the remaining bottles.</span>
+                            <span>  Trip Verified |  Fort Lauderdale  to LaGuardia. On June 15, 2019, I took a flight from FLL to LGA and when I was in Florida, a Delta employee checked all of my 7 suitcases. I paid extra weight and I went in the plane, when I was in the plane, in my seat 24F a Delta employee told me they had taken out a couple of bottles of liquor, after I paid for the extra weight. She told me that in order to get my bottles back all I had to do was call Delta the moment we landed. When I got home I noticed they had taken bottles of 4 of my suitcases not just one. That they had taken out 28 bottles. The problem was that when I called them the same night they said they had nothing but they would call me back, two weeks later passed they still hadn't call me and every single time I called I was told "we will call you back". I called them back almost every single day, every single time it was a different story and when finally someone told me that in fact those bottles where there, the next day they would say they had nothing. I don't understand how those bottles be there one day and then be gone the next day. As much as I like Delta I have to say that they or whoever opened my suitcases broke the rules because by law they are supposed to open my suitcases in front of me, they are supposed to call me to let me know that they are going to open them and none of that happened. Its over a month now and I've only gotten 7 of my bottles after they said they had 8. I no longer know what to do. I call Delta I call the TSA and all they say is that they only have 7 when I know for a fact that they have the remaining bottles.</span>
                         </div>
                         <br>
                         <table>
@@ -221,7 +240,7 @@
                         <span>  A Badem (United States) 22nd July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Los Angeles to Phoenix. I’m extremely disappointed in the quality of service of Delta. I had a one hour flight home from L.A. to Phoenix and about an hour before take off, I received a notification that the gate has changed and the time of departure has been delayed 5 hours (which would get me home by 1am - originally would have landed at 8pm). I spoke to 3 customer service reps, 2 by phone and 1 at the airport, and none were helpful in getting me on a new flight. What frustrated me most is they didn’t even try and offered me a $25 meal voucher. Keep in mind the terminal has about 2 food options, both of which are terrible, so I declined the voucher. I could have driven home sooner than the new arrival time, but because they notified us about the delay an hour before take off, it was too late to leave the airport, shuttle to the car rental, and drive home (leaving this airport is a nightmare). I am beyond unhappy with Delta and do not recommend this airline.</span>
+                            <span>  Trip Verified |  Los Angeles to Phoenix. I’m extremely disappointed in the quality of service of Delta. I had a one hour flight home from L.A. to Phoenix and about an hour before take off, I received a notification that the gate has changed and the time of departure has been delayed 5 hours (which would get me home by 1am - originally would have landed at 8pm). I spoke to 3 customer service reps, 2 by phone and 1 at the airport, and none were helpful in getting me on a new flight. What frustrated me most is they didn’t even try and offered me a $25 meal voucher. Keep in mind the terminal has about 2 food options, both of which are terrible, so I declined the voucher. I could have driven home sooner than the new arrival time, but because they notified us about the delay an hour before take off, it was too late to leave the airport, shuttle to the car rental, and drive home (leaving this airport is a nightmare). I am beyond unhappy with Delta and do not recommend this airline.</span>
                         </div>
                         <br>
                         <table>
@@ -319,7 +338,7 @@
                         <span>  Cody Frakes (United States) 20th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Detroit to Des Moines. Well first my bag didn’t come in on my plane then they sent it to the wrong airport so they called me the next day told me it was on the baggage claim and I said I was at work, I’ll call when I get off. So I called back then they told me it got sent to another airport and it wasn’t in. Here I am at 10:30 two days later still waiting on my bag so I can work. They messed up twice in one bag in a night - the only reason they got one star is cause I can’t give zero.</span>
+                            <span>  Trip Verified |  Detroit to Des Moines. Well first my bag didn’t come in on my plane then they sent it to the wrong airport so they called me the next day told me it was on the baggage claim and I said I was at work, I’ll call when I get off. So I called back then they told me it got sent to another airport and it wasn’t in. Here I am at 10:30 two days later still waiting on my bag so I can work. They messed up twice in one bag in a night - the only reason they got one star is cause I can’t give zero.</span>
                         </div>
                         <br>
                         <table>
@@ -417,7 +436,7 @@
                         <span>  Adam Hintz (United States) 20th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Columbus to Toronto via Atlanta. First flight was delayed to Detroit resulting in a missed layover. No problem, they let me reschedule for free even though I had an extra 3 more hours to spend in flight time which would have resulted in a cheaper flight from the start. New flight has me going through Atlanta where my connecting flight is delayed 3 hours because the original aircraft scheduled to Toronto was changed to Memphis 30 minutes before boarding time. I may just be upset in the moment, or it could be that anytime I fly with Delta there is always a delay somewhere. The aircraft and staff are usually friendly, this is more directed to overall operations of the airline.</span>
+                            <span>  Trip Verified |  Columbus to Toronto via Atlanta. First flight was delayed to Detroit resulting in a missed layover. No problem, they let me reschedule for free even though I had an extra 3 more hours to spend in flight time which would have resulted in a cheaper flight from the start. New flight has me going through Atlanta where my connecting flight is delayed 3 hours because the original aircraft scheduled to Toronto was changed to Memphis 30 minutes before boarding time. I may just be upset in the moment, or it could be that anytime I fly with Delta there is always a delay somewhere. The aircraft and staff are usually friendly, this is more directed to overall operations of the airline.</span>
                         </div>
                         <br>
                         <table>
@@ -515,7 +534,7 @@
                         <span>  S Talova (United States) 20th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Nashville to Atlanta. I’ll never fly with delta again! It’s the worst airline! I was flying 40 time in the past 2 years. And 12 times with delta and every time my flight was delayed for 2-6 hours. (Expect one) They never tell you a reason I never hat that problem with a different airline! Then they damaged my suite case twice and filled out a complain paper and they told me they can’t help me!? The same with something I forgot in the plane. They even didn’t wanted to help me. They have the worst costumer services I called them 2 hours later they called me back and I tried to talk very nice but after 10 minutes they just hang up! The worst I would never fly with delta again!</span>
+                            <span>  Trip Verified |  Nashville to Atlanta. I’ll never fly with delta again! It’s the worst airline! I was flying 40 time in the past 2 years. And 12 times with delta and every time my flight was delayed for 2-6 hours. (Expect one) They never tell you a reason I never hat that problem with a different airline! Then they damaged my suite case twice and filled out a complain paper and they told me they can’t help me!? The same with something I forgot in the plane. They even didn’t wanted to help me. They have the worst costumer services I called them 2 hours later they called me back and I tried to talk very nice but after 10 minutes they just hang up! The worst I would never fly with delta again!</span>
                         </div>
                         <br>
                         <table>
@@ -613,7 +632,7 @@
                         <span>  C Mahqar (United States) 19th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Had the worst experience with Delta Airlines. First, I had my flight to Chicago delayed because of a problem with a crew member, and then the flight eventually got canceled because of a rain. When I asked for a reimbursement, they denied because the flight is canceled due to weather. I didn’t get any refund for a bus ticket I already paid for in Chicago, or a place to stay. They gave me another flight to Chicago that stops in Atlanta, which is also delayed, and so was my flight from Atlanta to Chicago. Because of Delta’s inability to schedule flights correctly, I missed a bus that I paid 40 dollars for. I also had to wait 3 hours in Chicago because they left my bag in Atlanta for whatever reason. Don’t fly with Delta Airlines</span>
+                            <span>  Trip Verified |  Had the worst experience with Delta Airlines. First, I had my flight to Chicago delayed because of a problem with a crew member, and then the flight eventually got canceled because of a rain. When I asked for a reimbursement, they denied because the flight is canceled due to weather. I didn’t get any refund for a bus ticket I already paid for in Chicago, or a place to stay. They gave me another flight to Chicago that stops in Atlanta, which is also delayed, and so was my flight from Atlanta to Chicago. Because of Delta’s inability to schedule flights correctly, I missed a bus that I paid 40 dollars for. I also had to wait 3 hours in Chicago because they left my bag in Atlanta for whatever reason. Don’t fly with Delta Airlines</span>
                         </div>
                         <br>
                         <table>
@@ -907,7 +926,7 @@
                         <span>  G Mayer (United States) 17th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Asheville to Bonaire via Atlanta. I am writing only because of the appalling customer service I recently received. I know the flights are full and tensions are high however Delta puts it head and the ground and ignores it. We were on a flight from Asheville to Bonaire via Atlanta. The flight from Asheville had a small mechanical problem. It took the mechanic less than a minute to fix, however it took the mechanic 1.5 hours to get to the airport. Really? So we, four of us, missed our flight to Bonaire. This was at 9am and we are in Atlanta now for a full 24 hours - they would not put us on another flight. We go to the customer service desk and give us voucher to a motel that their employees do not even stay in. We asked for another option, with a restaurant and they said they do not give hotel vouchers to hotels with restaurants. No food vouchers, no transportation, nothing. We asked to talk to a manager and they gave us a number that is only answered Monday through Friday 9 to 5pm. It is a Saturday and we are flying out of the country. We have a water front condo with two bedrooms and a car rental that we lost out on. The next day we have to check our bags in all over again. My husband and I wait in line to check our bags in. We had picked them up the day before so we could have our things. After 25 minutes to do this, we are told we have to go into another line b/c there is no record we had paid for a bag the day before to Bonaire. There was another 20 to 30 minute line. I asked if she could take us to the front of the line and she said no. My husband nearly had a melt down. He gave me the dressing down and she felt so badly she took us over and checked us in. NOW WHY COULD SHE NOT DO THAT TO BEGIN WITH. I felt like they were trying to make us late and we would miss our flight again.</span>
+                            <span>  Trip Verified |  Asheville to Bonaire via Atlanta. I am writing only because of the appalling customer service I recently received. I know the flights are full and tensions are high however Delta puts it head and the ground and ignores it. We were on a flight from Asheville to Bonaire via Atlanta. The flight from Asheville had a small mechanical problem. It took the mechanic less than a minute to fix, however it took the mechanic 1.5 hours to get to the airport. Really? So we, four of us, missed our flight to Bonaire. This was at 9am and we are in Atlanta now for a full 24 hours - they would not put us on another flight. We go to the customer service desk and give us voucher to a motel that their employees do not even stay in. We asked for another option, with a restaurant and they said they do not give hotel vouchers to hotels with restaurants. No food vouchers, no transportation, nothing. We asked to talk to a manager and they gave us a number that is only answered Monday through Friday 9 to 5pm. It is a Saturday and we are flying out of the country. We have a water front condo with two bedrooms and a car rental that we lost out on. The next day we have to check our bags in all over again. My husband and I wait in line to check our bags in. We had picked them up the day before so we could have our things. After 25 minutes to do this, we are told we have to go into another line b/c there is no record we had paid for a bag the day before to Bonaire. There was another 20 to 30 minute line. I asked if she could take us to the front of the line and she said no. My husband nearly had a melt down. He gave me the dressing down and she felt so badly she took us over and checked us in. NOW WHY COULD SHE NOT DO THAT TO BEGIN WITH. I felt like they were trying to make us late and we would miss our flight again.</span>
                         </div>
                         <br>
                         <table>
@@ -1005,7 +1024,7 @@
                         <span>  David Grandy (United States) 11th July 2019</span>
                         <br>
                         <div>
-                            <span>✅ Trip Verified |  Detroit to Burlington. Awful and unacceptable experience on both outbound and return flights. Both delayed with no explanation or even an apology. Flights are useless if not on time. Delta going down hill - look for alternatives.</span>
+                            <span>  Trip Verified |  Detroit to Burlington. Awful and unacceptable experience on both outbound and return flights. Both delayed with no explanation or even an apology. Flights are useless if not on time. Delta going down hill - look for alternatives.</span>
                         </div>
                         <br>
                         <table>
@@ -1090,13 +1109,16 @@
                     </td>
                 </tr>
 				
-
+-->
 		</table>
+	
 		
 	</div>
 
 	<div class="jumbotron-footer">
-		<div>Copyright @ AirReview</div>
+		<div>Copyright @ YayuReview</div>
 	</div>
 </body>
+<script type="text/javascript" src="js/app.js"></script>
+
 </html>
