--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<td class="airline-desc">
 					<h4> <a href="ba.html">British Airways</a></h4>
 					<div>
-						<span>✅ Trip Verified | Tel Aviv to Toronto via London. The plane from London to Toronto was run by Air Belgium The service from checkin until we received our cases here in Israel was... <a href="ba.html">Read more</a></span>
+						<span>Verified | Tel Aviv to Toronto via London. The plane from London to Toronto was run by Air Belgium The service from checkin until we received our cases here in Israel was... <a href="ba.html">Read more</a></span>
 					</div>
 					<div>
 						<em><strong><a href="ba.html">334 Reviews</a></strong></em>
@@ -59,7 +59,7 @@
 					<br>
 					<h4> <a href="delta.html">Delta Airlines</a></h4>
 					<div>
-						<span>❎ Not Verified | Toronto to Venice via Montreal. Flight from Montreal to Venice was delayed for 3 hours, we were left on the tarmac with no air con, no food but access to the toilets. Cabin crew disappeared and... <a href="delta.html">Read more</a></span>
+						<span>Not Verified | Toronto to Venice via Montreal. Flight from Montreal to Venice was delayed for 3 hours, we were left on the tarmac with no air con, no food but access to the toilets. Cabin crew disappeared and... <a href="delta.html">Read more</a></span>
 					</div>
 					<div>
 						<em><strong><a href="delta.html">111 Reviews</a></strong></em>
@@ -76,7 +76,7 @@
 					<br>
 					<h4> <a href="cpa.html">Cathay Pacific Airways</a></h4>
 					<div>
-						<span>✅ Trip Verified | Dubai to Hong Kong. Want to be robbed in business class? Then let me recommend Cathay Pacific. Apparently this happens enough that showing people kindness and compassion does not matter to crew members as demonstrated to… <a href="cpa.html">Read more</a></span>
+						<span>Verified | Dubai to Hong Kong. Want to be robbed in business class? Then let me recommend Cathay Pacific. Apparently this happens enough that showing people kindness and compassion does not matter to crew members as demonstrated to… <a href="cpa.html">Read more</a></span>
 					</div>
 					<div>
 						<em><strong><a href="cpa.html">596 Reviews</a></strong></em>
@@ -93,7 +93,7 @@
 					<br>
 					<h4> <a href="at.html">Air Transat</a></h4>
 					<div>
-						<span>✅ Trip Verified | I flew from Amsterdam to Jakarta on 13 June. I bought the ticket last minutes at the airport and the staff were so helpful. It was delayed for about 40 minutes. The cabin crew ware so… <a href="at.html">Read more</a></span>
+						<span>Verified | I flew from Amsterdam to Jakarta on 13 June. I bought the ticket last minutes at the airport and the staff were so helpful. It was delayed for about 40 minutes. The cabin crew ware so… <a href="at.html">Read more</a></span>
 					</div>
 					<div>
 						<em><strong><a href="at.html">298 Reviews</a></strong></em>
@@ -110,7 +110,7 @@
 					<br>
 					<h4> <a href="emirates.html">Emirates</a></h4>
 					<div>
-						<span>✅ Trip Verified | Asheville to Bonaire via Atlanta. I am writing only because of the appalling customer service I recently received. I know the flights are full and tensions are high however Delta puts it head and the ground and ignores it.… <a href="emirates.html">Read more</a></span>
+						<span>Verified | Asheville to Bonaire via Atlanta. I am writing only because of the appalling customer service I recently received. I know the flights are full and tensions are high however Delta puts it head and the ground and ignores it.… <a href="emirates.html">Read more</a></span>
 					</div>
 
 					<div>
@@ -126,7 +126,7 @@
 
  
 	<div class="jumbotron-footer">
-		<div>Copyright @ AirReview</div>
+		<div>Copyright @ VayuReview</div>
 	</div>
 
 
