for some reason, remove js again

--- a/ba.html
+++ b/ba.html
@@ -113,14 +113,14 @@
 			</tr>
 		</table>
 
-		<div>
+	<!-- 	<div>
 			<span>
 				Filter Results :
 			</span>
 			<br>			
 			<button class="btn btn-small" id = '10' onclick="handleClick(10)" id="show-10">10 Reviews</button>
 			<button class="btn btn-small" id = '25' onclick="handleClick(25)" id="show-25">25 Reviews</button>
-		</div>
+		</div> -->
 
 		<div id='num_results_display'>
 			
@@ -130,7 +130,7 @@
 
 		<table id="reviews-table">
 
-<!-- 			 <tr>
+			 <tr>
                     <td style="vertical-align: top;">
                                         <br>
                         <div class="rating-circle-medium">9/10</div>
@@ -1108,7 +1108,7 @@
                         </table>
                         <br>
                     </td>
-                </tr> -->
+                </tr>
     
 
 		</table>
@@ -1120,5 +1120,5 @@
 	</div>
 
 </body>
-<script type="text/javascript" src="js/app.js"></script>
+<!-- <script type="text/javascript" src="js/app.js"></script> -->
 </html>
