--- a/delta.html
+++ b/delta.html
@@ -111,14 +111,14 @@
 			</tr>
 		</table>
 
-				<div>
+				<!-- <div>
 			<span>
 				Filter Results :
 			</span>
 			<br>			
 			<button class="btn btn-small" id = '10' onclick="handleClick(10)" id="show-10">10 Reviews</button>
 			<button class="btn btn-small" id = '25' onclick="handleClick(25)" id="show-25">25 Reviews</button>
-		</div>
+		</div> -->
 
 		<div id='num_results_display'>
 			
@@ -128,8 +128,7 @@
 
 		<table id="reviews-table">
 
-<!--
-		<table>
+		
 			<tr>
                     <td style="vertical-align: top;">
                                         <br>
@@ -1109,7 +1108,7 @@
                     </td>
                 </tr>
 				
--->
+
 		</table>
 	
 		
@@ -1119,6 +1118,6 @@
 		<div>Copyright @ YayuReview</div>
 	</div>
 </body>
-<script type="text/javascript" src="js/app.js"></script>
+<!-- <script type="text/javascript" src="js/app.js"></script> -->
 
 </html>
